--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <h1>hello  top of the root</h1>
-    <div id="root">
-        <h1>"nandini is here"</h1>
+    <!-- <h1>hello  top of the root</h1> -->
+    <div id="root" class="root">
+        <h1>"nandini is here"</h1> 
 
     </div>
-    <h1>hello from beloow</h1>
+    <!-- <h1>hello from beloow</h1> -->
   
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script> -->
+<!-- <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
 
-<script src="./app.js">
+<script type="module" src="./app.js">// telling the browser it is not a normal js file
+
 
 </script>
+<script type="module" src="./src/befoody.js"></script>
 </body>
 </html>
